src/anura.css
body {
    --oobe-bg: #fff;
}
#overlay {
    width: 100%;
    height: 100%;
    left: 0;
    top: 0;
    right: 0;
    position: fixed;
    background: gray;
    opacity: 0.5;
    z-index: 98;
}

body {
    overflow: hidden;
    background: url(/assets/wallpaper/wallpaper.png) no-repeat center center
        fixed;
    user-select: none;
    font-family: "Roboto", sans-serif;
}

footer {
    position: fixed;
    bottom: 0;
    left: -2px;
    width: 100%;
    border-top-left-radius: 25px;
    border-top-right-radius: 25px;
    background-color: rgba(22, 22, 22, 0.8);
    border: 2px solid rgba(22, 22, 22, 0.6);
    border-bottom: none;
    backdrop-filter: blur(5px);
}

nav ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    text-align: center;
}

nav li {
    display: inline-block;
    margin-right: 20px;
    padding-top: 5px;
}

.showDialog {
    width: 40px;
    height: 40px;
}
.lightbar {
    width: 40px;
    height: 5px;
    position: relative;
    bottom: 1px;
    border-radius: 5px;
}

.bootsplash {
    background-color: black;
    z-index: 9999999999;
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    display: flex;
    justify-content: center;
    align-content: center;
    flex-wrap: wrap;
}

.bootsplash > img {
    width: 300px;
    height: 80px;
}

#screen_container,
canvas {
    width: 100%;
    height: 100%;
}
.flex {
    display: flex;
}
.flexcenter {
    justify-content: space-evenly;
    align-items: center;
}

.custom-menu {
    position: absolute;
    border: 1px solid #000000;
    background-color: rgba(0, 0, 0, 0.7);
    border-radius: 20px;
    padding: 10px 0;
    width: 300px;
    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.5);

    z-index: 10000;
    overflow: hidden;
}
.custom-menu-item {
    padding: 8px 12px;
    color: #ffffff;
    cursor: pointer;
    user-select: none;
}
.custom-menu-item:hover {
    background-color: rgba(255, 255, 255, 0.1);
}

.material-symbols-outlined {
    font-family: "Material Symbols Outlined", sans-serif;
}
.custom-menu-item {
    display: flex;
    align-items: center;
    padding: 8px 12px;
    color: #ffffff;
    cursor: pointer;
    user-select: none;
}

.custom-menu-item .material-symbols-outlined {
    margin-top: 0.05px;
    margin-right: 5px;
    padding-left: 1px;
}

.custom-menu .extra-menu-wrapper {
    position: fixed;
}

.custom-menu .extra-menu {
    position: relative;
    left: 303px;
    bottom: 0.75em;
}

